// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`themes >> Modal Content Render modal content with NO description  Should render modal correctly with ONLY header 1`] = `
<View
  style={
    Array [
      Object {
        "alignContent": "center",
        "alignItems": "center",
        "display": "flex",
        "margin": 16,
        "paddingBottom": 8,
      },
      Array [
        Object {},
      ],
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#A9ABAD",
          "display": "flex",
          "fontFamily": "SFUIText-Bold",
          "fontSize": 32,
          "fontWeight": "bold",
          "lineHeight": 40,
          "textAlign": "center",
        },
      ]
    }
  >
    This is the modal content
  </Text>
</View>
`;

exports[`themes >> Modal Content Render modal content with header and description Should render modal correctly with header and description 1`] = `
<View
  style={
    Array [
      Object {
        "alignContent": "center",
        "alignItems": "center",
        "display": "flex",
        "margin": 16,
        "paddingBottom": 8,
      },
      Array [
        Object {},
      ],
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#A9ABAD",
          "display": "flex",
          "fontFamily": "SFUIText-Bold",
          "fontSize": 32,
          "fontWeight": "bold",
          "lineHeight": 40,
          "textAlign": "center",
        },
      ]
    }
  >
    This is the modal content
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#A9ABAD",
          "display": "flex",
          "fontFamily": "SFUIDisplay-Regular",
          "fontSize": 18,
          "lineHeight": 20,
          "marginTop": 16,
          "textAlign": "center",
        },
      ]
    }
  >
    This is the description of the modal content
  </Text>
</View>
`;
